idp/service.yaml
apiVersion: v1
kind: Service
# service's name
metadata:
  name: tallyme-idp-service
spec:
  selector:
    # deployment's name
    app: tallyme-idp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
