idp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tallyme-idp-ingress
  annotations:
    # force http requests to redirect to https
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  # enable https for the specified host using Minikube's fake certificate
  tls:
  - hosts:
    - tallyme-idp.localhost
  rules:
  - host: tallyme-idp.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          # service's name
          service:
            name: tallyme-idp-service
            port:
              number: 8080
